Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-91879

Invisible but item layer View3D with Inline render mode crashes

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.0.3, 6.1.0 RC
    • 6.1
    • Quick: 3D
    • None
    • d744408022e31a354bfd750b30c4b7bbc8c70840 (qt/qtquick3d/dev) 908feebc7a4271498bcf4c644b02d55671814725 (qt/qtquick3d/6.0) b221043b3f8267d082b77b2e584e00326f7a4318 (qt/qtquick3d/6.1)
    • Qt Quick 3D - 2021 Week 11/12

      Have a View3D with:

      visible: false
      layer.enabled: true
      renderMode: View3D.Inline
      

      which happens to be one of the few use cases where the Inline renderMode can be highly relevant.

      This won't work because synchronize() is not called correctly. Needs fixing similarly to what has been done for Offscreen bfore.

        For Gerrit Dashboard: QTBUG-91879
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            lagocs Laszlo Agocs
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes