Fix crashing View3Ds with Inline mode when setting layer.enabled

Fixes: QTBUG-91879
Change-Id: Ic258a208bd09770f584837bd939c8085e3e20960
Reviewed-by: Inho Lee <inho.lee@qt.io>
(cherry picked from commit d744408022e31a354bfd750b30c4b7bbc8c70840)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>